# cat_dog

./: .gitignore  README.md  experiment.xlsx  log.md
check_point/: cat_dog.pth
inferce/: pt2bin.py
inference/: CMakeLists.txt  cat_dog.cpp  check_acc_bin.py
onnx_model/: cat_dog.onnx
train/: config.py  inference.py  init_archive.py  init_data.py  test.bat  test.py  training.py
train/pt_file/: cat_dog_input.pt  cat_dog_output.pt
